--- a/beauty-app/src/app/pages/profile/profile.page.html
+++ b/beauty-app/src/app/pages/profile/profile.page.html
@@ -13,15 +13,20 @@
         <div class="ion-text-center">
           <h2 class="font-title">Y o u r P r o f i l e</h2>
           <ion-avatar class="profile-img">
-            <img [src]="hero.getUser().img_perfil === null ? 'assets/img/no-profile.png' : hero.getDomain() + '/file/profile/' + hero.getUser().img_perfil" alt="profileuser" (click)="presentActionSheet()">
+            <img
+              [src]="hero.getUser().img_perfil === null ? 'assets/img/no-profile.png' : hero.getDomain() + '/file/profile/' + hero.getUser().img_perfil"
+              alt="profileuser" (click)="presentActionSheet()">
           </ion-avatar>
           <h4>{{data.nombres}}</h4>
           <h5>{{data.email}}</h5>
-        </div>      
+        </div>
         <ion-toolbar>
           <ion-segment color="primary-bl" (ionChange)="segmentChanged($event)" value="photos">
             <ion-segment-button value="personalData">
               <ion-icon name="card"></ion-icon>
+            </ion-segment-button>
+            <ion-segment-button value="blog">
+              <ion-icon name="globe"></ion-icon>
             </ion-segment-button>
             <ion-segment-button value="photos">
               <ion-icon name="alarm"></ion-icon>
@@ -32,6 +37,9 @@
           </ion-segment>
         </ion-toolbar>
         <app-profile-data *ngIf="content=='personalData'"></app-profile-data>
+        <ion-card *ngIf="content=='blog'" color="light">
+          <app-post [posts]="posts"></app-post>
+        </ion-card>
         <app-profile-photos *ngIf="content=='photos'"></app-profile-photos>
         <app-profile-review-blog *ngIf="content=='reviewBlog'"></app-profile-review-blog>
       </ion-col>
@@ -39,7 +47,7 @@
     </ion-row>
   </ion-grid>
 
-<!--   <ion-fab  vertical="bottom" horizontal="end" slot="fixed" *ngIf="content=='personalData'">
+  <!--   <ion-fab  vertical="bottom" horizontal="end" slot="fixed" *ngIf="content=='personalData'">
     <ion-fab-button color="primary-bl" routerLink="/data-complete">
       <ion-icon name="create"></ion-icon>
     </ion-fab-button>
