--- a/beauty-app/src/app/components/post/post.component.html
+++ b/beauty-app/src/app/components/post/post.component.html
@@ -1,23 +1,23 @@
 <ion-grid>
   <ion-row>
-      <ion-col *ngFor="let post of cards; index as i;" size="12" size-sm="12" size-md="4" size-lg="4">
+      <ion-col class="no-padding" *ngFor="let post of cards; index as i;" size="12">
           <ion-card class="card-social">
               <ion-card-header class="padding-fix">
                   <ion-grid class="height-fix">
                       <ion-row>
-                          <ion-col size="2">
+                          <ion-col size="2" class="no-padding">
                               <ion-avatar class="avatar-social">
-                                  <img (click)="viewProfile(id)" src="{{hero.getDomain()}}/file/profile/{{post.user.img_perfil}}">
+                                  <img (click)="viewProfile(post.user.id)" src="{{hero.getDomain()}}/file/profile/{{post.user.img_perfil}}">
                               </ion-avatar>
                           </ion-col>
 
-                          <ion-col size="9">
-                              <h2 class="social-name" (click)="viewProfile(id)">{{post.user.nombres}}</h2>
+                          <ion-col size="9" class="no-padding">
+                              <h2 class="social-name" (click)="viewProfile(post.user.id)">{{post.user.nombres}}</h2>
 
                               <h5 class="postage">Posted {{post.fecha}}</h5>
                           </ion-col>
 
-                          <ion-col size="1">
+                          <ion-col size="1" class="no-padding">
                               <ion-icon (click)="presentPopover($event)" class="icon-more" name="md-more">
                               </ion-icon>
                           </ion-col>
@@ -35,7 +35,7 @@
                           </ion-slides>
                           <img *ngIf="post.images.length === 1"
                               [src]="hero.getDomain()+'/file/blog/'+post.images[0].imagen">
-                          <ion-col size="2">
+                          <ion-col class="no-padding" size="2">
                               <img (click)="likeFocus(i)" class="likeicon" src="/assets/icon/like.svg"
                                   *ngIf="!post.liked">
                               <img (click)="likeFocus(i)" class="likeicon" src="/assets/icon/likeFocus.svg"
@@ -43,15 +43,14 @@
                               <br>
                               <h1 class="likes ion-text-center">{{post.likes_count}}</h1>
                           </ion-col>
-                          <ion-col size="10">
-                              <h1 class="tinytext">
-                                  {{post.descripcion}}</h1>
+                          <ion-col class="no-padding" size="10">
+                              <ion-textarea class="textarea no-margin" autoGrow="true" rows="4" readonly [(ngModel)]="post.descripcion"></ion-textarea>
                           </ion-col>
                           <ion-col *ngIf="post.comments.length > 0" size="12" class="box-comm">
                               <p *ngFor="let comm of post.comments"> <b>{{comm.user.nombres}}</b>
                                   {{comm.comentario}}</p>
                           </ion-col>
-                          <ion-col size="12">
+                          <ion-col size="12" class=no-padding>
                               <div>
                                   <ion-item class="line-up">
                                       <ion-input placeholder="Add Comment" [(ngModel)]="this.cards[i].comment">
