--- a/beauty-app/src/app/pages/new-post/new-post.page.scss
+++ b/beauty-app/src/app/pages/new-post/new-post.page.scss
@@ -1,3 +1,7 @@
+.icon-close{
+    color: aliceblue;
+    font-size: 40px;
+}
 ion-slides{
     --bullet-background:grey;
     --bullet-background-active:rgb(255, 0, 221);
