--- a/beauty-app/src/app/pages/modal-sroom/modal-sroom.page.scss
+++ b/beauty-app/src/app/pages/modal-sroom/modal-sroom.page.scss
@@ -1,6 +1,6 @@
 .room-modaltxt{
     color: aliceblue;
     font-size: 25px;
-    font-family: 'advent_promedium';
+    font-family: 'bioliquidregular';
     text-align: center;
 }
