--- a/beauty-app/src/app/pages/medicform/medicform.page.html
+++ b/beauty-app/src/app/pages/medicform/medicform.page.html
@@ -6,30 +6,28 @@
     <ion-title>Medical User Info</ion-title>
   </ion-toolbar>
 </ion-header>
+
 <ion-content>
   <ion-grid>
     <ion-row>
-      <img class="img-logo grid-input" src="assets/logoBL/whiteLogoH.png" alt="">
-    </ion-row>
-    <ion-row>
           <ion-col size="0" size-md="3" size-lg="3" size-sm="0"></ion-col>
       <ion-col size="12" size-md='6' size-lg="6" size-sm="12">
-        <ion-col size="12">
-          <ion-label color="light">
-            How match is your weight?
-          </ion-label>
-          <ion-label color="light">
-            What is your height?
-          </ion-label>
-        </ion-col>
-        <ion-row>
-    <ion-col size='6'>
+        <img class="img-logo" src="assets/logoBL/whiteLogoH.png" alt="">
+      <ion-col size="12">
+        <ion-text color="light">
+          Medical form.
+        </ion-text>
+      </ion-col>
+      <ion-row>
+    <ion-col size='12'>
       <ion-item>
          <ion-input step="0.1" autofocus type="number" slot="start"></ion-input>
         <ion-text class="form-title " slot='end'> Kg </ion-text>
       </ion-item>
     </ion-col>
-    <ion-col size='6'>
+  </ion-row>
+  <ion-row>
+    <ion-col size='12'>
       <ion-item>
          <ion-input step="0.01" type="number" slot="start"></ion-input>
         <ion-text class="form-title"slot='end'> Mts </ion-text>
@@ -38,7 +36,6 @@
   </ion-row>
   <ion-row>
     <ion-col size='12'>
-      <ion-label color="light">What is your blood type?</ion-label>
       <ion-item>
         <ion-label class="form-title">Bt</ion-label>
           <ion-select>
@@ -64,7 +61,7 @@
         <ion-col size="0" size-md="3" size-lg="3" size-sm="0"></ion-col>
     </ion-row>
   </ion-grid>
-  <ion-grid class="grid-qst">
+  <ion-grid>
     <ion-row>
       <ion-col *ngFor="let item of checkList " size="{{item.size}}">
         <ion-item><ion-label class="title-check"> {{item.title}}</ion-label>
@@ -72,7 +69,4 @@
       </ion-col>
     </ion-row>
   </ion-grid>
-  <ion-button color="light" expand="block" class="btn-save">
-    Save
-  </ion-button>
 </ion-content>
