--- a/beauty-app/src/app/pages/trips/trips.page.html
+++ b/beauty-app/src/app/pages/trips/trips.page.html
@@ -1,8 +1,8 @@
 <app-header titulo="BeautyLab Plans"></app-header>
 <br>
 <ion-content>
-  <iframe scrolling="no" style="position:sticky; top:20px; left:0px; bottom:0px; right:0px; width:100%; height:100%; border:none; margin:0; padding:1em 0; overflow:hidden; z-index:0;" src="http://old.travelpayouts.com/widgets/0a549d7d65737569518aac55ca623554.html?v=1916"></iframe>
-  <br>
+  <iframe scrolling="yes" style="position:sticky; top:20px; left:0px; bottom:0px; right:0px; width:100%; height:100%; border:none; margin:0; padding:1em 0; overflow:hidden; z-index:0;" src="http://old.travelpayouts.com/widgets/0a549d7d65737569518aac55ca623554.html?v=1916"></iframe>
+
   <ion-grid fixed>
     <ion-row>
       <ion-col size="2" size-lg="2" size-md="2"></ion-col>
