change password-forgot pass style

--- a/beauty-app/src/app/pages/forgot-password/forgot-password.page.scss
+++ b/beauty-app/src/app/pages/forgot-password/forgot-password.page.scss
@@ -2,11 +2,29 @@
     position: relative;
     top: 8rem;
 }
-.input{
-    --background:white;
-    top: 10rem !important;
+.img-logo{
+    max-width: 72%;
+    display: block;
+    margin: auto;
 }
+.input{
+    color: #287ff1;
+    --background: rgb(236, 234, 234);
+    width: 100%;
+    height: 50px;
+    border-radius: 10px;
+    margin-bottom: 10px;
+    top: 10rem !important;
+    text-align: center;
+}
+
 .btn-style{
     position: relative;
-    top: 13rem;
+    top: 10rem;
+    --color: #287ff1;
+    --background:white;
+    --background-activated: #d9d9db;
+}
+.txt-forgot{
+    font-size: 12px;
 }
