--- a/beauty-app/src/app/pages/change-password/change-password.page.html
+++ b/beauty-app/src/app/pages/change-password/change-password.page.html
@@ -3,7 +3,7 @@
     <ion-row>
         <ion-col size="0" size-md="3" size-sm="0" size-lg="3"></ion-col>
       <ion-col size="12" size-md="6" size-sm="12" size-lg="6" >
-        <img class="center" src="./../../../assets/logoBL/whiteLogoH.png">
+        <img class="center img-logo" src="./../../../assets/logoBL/whiteLogoH.png">
     <ion-row>
       <ion-col>
         <ion-input type="password" class="center input" autofocus placeholder="New Password">
