--- a/beauty-app/src/app/pages/change-password/change-password.page.scss
+++ b/beauty-app/src/app/pages/change-password/change-password.page.scss
@@ -3,10 +3,24 @@
     top: 8rem;
 }
 .input{
-    --background:white;
+    color: #287ff1;
+    --background: rgb(236, 234, 234);
+    width: 100%;
+    height: 50px;
+    border-radius: 10px;
+    margin-bottom: 10px;
     top: 10rem !important;
+    text-align: center;
 }
 .btn-style{
     position: relative;
-    top: 13rem;
+    top: 10rem;
+    --color: #287ff1;
+    --background:white;
+    --background-activated: #d9d9db;
 }   
+.img-logo{
+    max-width: 72%;
+    display: block;
+    margin: auto;
+}
