--- a/beauty-app/src/app/pages/shop/shop.page.html
+++ b/beauty-app/src/app/pages/shop/shop.page.html
@@ -1,4 +1,21 @@
 <app-header titulo="BeautyLab Rooms"></app-header>
+
 <ion-content>
-<h1> COMING SOON </h1>
+    <ion-grid fixed>
+        <ion-row>
+            <ion-col *ngFor="let producto of products">
+                <ion-card>
+                    <img [src]="producto.image"/>
+                    <ion-card-content>
+                        <ion-card-title>
+                            {{ producto.title }}
+                        </ion-card-title>
+                        <p>
+                            {{ producto.product_type }}
+                        </p>
+                    </ion-card-content>
+                </ion-card>
+            </ion-col>
+        </ion-row>
+    </ion-grid>
 </ion-content>
