--- a/beauty-app/src/app/pages/social/social.page.html
+++ b/beauty-app/src/app/pages/social/social.page.html
@@ -20,6 +20,9 @@
             <ion-fab-button (click)="goToNewPost('gallery')" color="primary">
                 <ion-icon class="icon-c-g" name="images"></ion-icon>
             </ion-fab-button>
+            <ion-fab-button (click)="goToNewPost('text')" color="primary">
+                <ion-icon class="icon-c-g" name="create"></ion-icon>
+            </ion-fab-button>
             <ion-fab-button (click)="goToNewPost('camera')" color="primary">
                 <ion-icon class="icon-c-g" name="camera"></ion-icon>
             </ion-fab-button>
