--- a/beauty-app/src/app/pages/shop/shop.page.html
+++ b/beauty-app/src/app/pages/shop/shop.page.html
@@ -1,18 +1,64 @@
 <app-header titulo="BeautyLab Rooms"></app-header>
 
 <ion-content>
+    <h1>BeautyLab Shop</h1>
     <ion-grid fixed>
         <ion-row>
-            <ion-col *ngFor="let producto of products">
+            <ion-col size="6">
                 <ion-card>
-                    <img [src]="producto.image"/>
+                    <img src="../../../assets/img/shortBeautyLab.jpg"/>
                     <ion-card-content>
                         <ion-card-title>
-                            {{ producto.title }}
+                           <h3 class="txt">Shorts</h3>
                         </ion-card-title>
-                        <p>
-                            {{ producto.product_type }}
+                        <p class="txt">
+                           from 24.50
                         </p>
+                        <ion-button color="primary" expand="full">Buy</ion-button>
+                    </ion-card-content>
+                </ion-card>
+            </ion-col>
+            <ion-col size="6">
+                <ion-card>
+                    <img src="../../../assets/img/packBeauty.png"/>
+                    <ion-card-content>
+                        <ion-card-title>
+                           <h3 class="txt">Fanny Pack</h3>
+                        </ion-card-title>
+                        <p class="txt">
+                           from 35.00
+                        </p>
+                        <ion-button color="primary" expand="full">Buy</ion-button>
+                    </ion-card-content>
+                </ion-card>
+            </ion-col>
+        </ion-row>
+        <ion-row>
+            <ion-col size="6">
+                <ion-card>
+                    <img src="../../../assets/img/shortBeautyLab.jpg"/>
+                    <ion-card-content>
+                        <ion-card-title>
+                           <h3 class="txt">Shorts</h3>
+                        </ion-card-title>
+                        <p class="txt">
+                           from 24.50
+                        </p>
+                        <ion-button color="primary" expand="full">Buy</ion-button>
+                    </ion-card-content>
+                </ion-card>
+            </ion-col>
+            <ion-col size="6">
+                <ion-card>
+                    <img src="../../../assets/img/capBeautylab.jpg"/>
+                    <ion-card-content>
+                        <ion-card-title>
+                           <h3 class="txt">Dad Hat</h3>
+                        </ion-card-title>
+                        <p class="txt">
+                           from 22.50
+                        </p>
+                        <ion-button color="primary" expand="full">Buy</ion-button>
                     </ion-card-content>
                 </ion-card>
             </ion-col>
