--- a/beauty-app/src/app/pages/shop/shop.page.scss
+++ b/beauty-app/src/app/pages/shop/shop.page.scss
@@ -3,5 +3,11 @@ h1{
         font-size:33px;
         color:aliceblue;
         text-align: center ;
-        padding-top: 10rem;
+        padding-top: 2rem;
+       }
+
+
+       .txt{
+               color:#fff;
+               font-size: 20px;
        }
