--- a/beauty-app/src/app/components/purchase-success/purchase-success.component.html
+++ b/beauty-app/src/app/components/purchase-success/purchase-success.component.html
@@ -6,4 +6,8 @@
     <ion-button class="btn-home" expand="block" routerLink="/tabs/home" color="light">
       GO BACK HOME
     </ion-button>
+
+    <ion-button class="btn-home" expand="block" routerLink="/trips" color="primary">
+      You Want Buy Your Fly!! Click Here
+    </ion-button>
 </div>
