--- a/beauty-app/src/app/pages/change-password/change-password.page.html
+++ b/beauty-app/src/app/pages/change-password/change-password.page.html
@@ -18,7 +18,7 @@
         </ion-row>
         <ion-row>
           <ion-col>
-            <ion-button color="light"class="btn-style" expand="block">
+            <ion-button class="btn-style" expand="block">
                 Send
             </ion-button>
           </ion-col>
