Terms and condition -Text

--- a/beauty-app/src/app/pages/terms/terms.page.html
+++ b/beauty-app/src/app/pages/terms/terms.page.html
@@ -63,6 +63,7 @@
                 <p
                   *ngIf="item.state"
                   class="font ion-padding"
+                  [innerHtml]="item.text"
                 >{{item.text}}</p>
               </div>
             </div>
