--- a/beauty-app/src/app/components/post/post.component.html
+++ b/beauty-app/src/app/components/post/post.component.html
@@ -41,10 +41,10 @@
                                 <img (click)="likeFocus(i)" class="likeicon" src="/assets/icon/likeFocus.svg"
                                     *ngIf="post.liked">
                                 <br>
-                                <h1 (click)="openModal()" class="likes ion-text-center">{{post.likes_count}}</h1>
+                                <h1 routerLink="/modal-likes/{{post.id}}" class="likes ion-text-center">{{post.likes_count}}</h1>
                             </ion-col>
                             <ion-col class="no-padding" size="10">
-                                <ion-textarea class="textarea no-margin" autoGrow="true" rows="4" readonly [(ngModel)]="post.descripcion"></ion-textarea>
+                                <ion-textarea class="textarea no-margin" autoGrow="true" readonly [(ngModel)]="post.descripcion"></ion-textarea>
                             </ion-col>
                             <ion-col *ngIf="post.comments.length > 0" size="12" class="box-comm">
                                 <p *ngFor="let comm of post.comments"> <b>{{comm.user.nombres}}</b>
