--- a/beauty-app/src/app/pages/login/login.page.html
+++ b/beauty-app/src/app/pages/login/login.page.html
@@ -38,13 +38,11 @@
           </ion-col>
         </ion-row>
         <ion-row>
-          <ion-col class='ion-text-center'>
-            <ion-text color="light">
-              im new, i need
-            </ion-text>
-          </ion-col>
           <ion-col size='12' class='ion-text-center'>
             <a routerLink="/register" class="reg">create an account</a>
+          </ion-col>
+          <ion-col size='12' class='ion-text-center'>
+            <a routerLink="/forgot-password" class="reg">Forgot your password?</a>
           </ion-col>
           <ion-col size='12' class="ion-text-center">
             <!-- <a routerLink="/terms" class="reg">Terms And Conditions</a> -->
