--- a/beauty-app/src/app/pages/modal-likes/modal-likes.page.html
+++ b/beauty-app/src/app/pages/modal-likes/modal-likes.page.html
@@ -1,25 +1,28 @@
-<ion-header collapse="condense">
+<ion-header>
   <ion-toolbar>
-  <ion-buttons slot='start'>
-  <ion-button (click)="closeMd()">
-    <ion-icon name="ios-close"></ion-icon>
-</ion-button>
-</ion-buttons>
-</ion-toolbar>
+    <ion-buttons slot='start'>
+      <ion-back-button color="medium"></ion-back-button>
+    </ion-buttons>
+  </ion-toolbar>
 </ion-header>
 <ion-content color="light">
   <ion-grid>
-    <ion-row *ngFor="let item of likes">
-      <ion-col>
-        <ion-item>
-          <ion-avatar slot="start">
-            <img src="assets/img/{{item.img}}" alt="">
-          </ion-avatar>
-          <ion-text>
-            {{item.name}}
-          </ion-text>
-        </ion-item>
+    <ion-row>
+      <ion-col size="0" size-md="3" size-lg="4"></ion-col>
+      <ion-col size="12" size-md="6" size-lg="4">
+        <ion-spinner *ngIf="loading" class="center" color="primary-bl"></ion-spinner>
+        <ion-list *ngIf="!loading" lines="none">
+          <ion-item *ngFor="let item of likes" routerLink="/profile/{{item.user.id}}">
+            <ion-avatar slot="start">
+              <img
+                [src]="item.user.img_perfil === null ? 'assets/img/no-profile.png'  : hero.getDomain() + '/file/profile/' + item.user.img_perfil"
+                alt="">
+            </ion-avatar>
+            <ion-label>{{item.user.nombres}} {{item.user.apellidos}}</ion-label>
+          </ion-item>
+        </ion-list>
       </ion-col>
+      <ion-col size="0" size-md="3" size-lg="4"></ion-col>
     </ion-row>
   </ion-grid>
 </ion-content>
