--- a/beauty-app/src/app/pages/social/social.page.html
+++ b/beauty-app/src/app/pages/social/social.page.html
@@ -1,7 +1,7 @@
 <app-header></app-header>
 
 <ion-content *ngIf="!loading" [scrollEvents]="true" (ionScrollStart)="logScrollStart()">
-    <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)">
+    <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)" pullFactor="0.5" pullMin="100" pullMax="200">
         <ion-refresher-content pullingIcon="arrow-up" refreshingSpinner="circles">
         </ion-refresher-content>
     </ion-refresher>
