--- a/beauty-app/src/app/pages/forgot-password/forgot-password.page.html
+++ b/beauty-app/src/app/pages/forgot-password/forgot-password.page.html
@@ -14,12 +14,12 @@
       </ion-col>
     </ion-row>
         <ion-row>
-          <ion-input type="email"  class="center input" autofocus placeholder="Email Address">
+          <ion-input type="email"  class="center input" autofocus placeholder="Email Address" [(ngModel)]="email">
           </ion-input> 
         </ion-row>
         <ion-row>
           <ion-col>
-            <ion-button class="btn-style" expand="block">
+            <ion-button (click)="sendEmail()" class="btn-style" expand="block">
                 Send
             </ion-button>
           </ion-col>
