--- a/beauty-app/src/app/pages/contact/contact.page.html
+++ b/beauty-app/src/app/pages/contact/contact.page.html
@@ -12,7 +12,7 @@
       <ion-col size='0' size-sm='0' size-md='3' size-lg='4'></ion-col>
     <ion-row>
       <ion-col>
-        <ion-input [(ngModel)]="email" class='input-contact' type="mail" placeholder='Enter your email'></ion-input>
+        <ion-input [(ngModel)]="subject" class='input-contact' type="text" placeholder='Enter your Subject'></ion-input>
       </ion-col>
     </ion-row>
     <ion-row>
