--- a/beauty-app/src/app/pages/register/register.page.html
+++ b/beauty-app/src/app/pages/register/register.page.html
@@ -52,7 +52,7 @@
             <ion-icon class="icon" name="lock" color="light"></ion-icon>
           </ion-col>
           <ion-col size="10">
-            <ion-input class="input" [(ngModel)]="data.password_confirmation" placeholder="Password" type="password"></ion-input>
+            <ion-input class="input" [(ngModel)]="data.password_confirmation" placeholder="Retype Password" type="password"></ion-input>
           </ion-col>
         </ion-row>
         <ion-row class="ion-text-center">
