--- a/beauty-app/src/app/pages/deposit/deposit.page.html
+++ b/beauty-app/src/app/pages/deposit/deposit.page.html
@@ -90,14 +90,14 @@
         <h3 class="ion-text-center" style="padding-top: 2rem;">$500 USD</h3>
         <ion-button expand="block" class="button-pay" (click)="payWithPaypal()">Make Deposit</ion-button>
         <ion-row>
-          <ion-col size="12">
+          <ion-col size="6">
             <ion-button color="medium" expand="block" (click)="cancel()">Cancel <ion-icon class="ion-float-right" name="close"></ion-icon>
             </ion-button>
             </ion-col>
-            <!-- <ion-col size="6">
-              <ion-button color="primary-bl" expand="block">Add to car <ion-icon class="ion-float-right" name="cart"></ion-icon>
+            <ion-col size="6">
+              <ion-button (click)="addCar()" color="primary-bl" expand="block">Add to car <ion-icon class="ion-float-right" name="cart"></ion-icon>
               </ion-button>
-            </ion-col> -->
+            </ion-col>
         </ion-row>
         <ion-row>
           <ion-col size="6">
