--- a/beauty-app/src/app/pages/homeapp/homeapp.page.html
+++ b/beauty-app/src/app/pages/homeapp/homeapp.page.html
@@ -32,7 +32,7 @@
             <ion-grid>
                 <ion-row>
                     <ion-col style="padding-bottom: 15px" size="4" *ngFor="let tur of item.items" >
-                        <img src="assets/img/TOURISTICPLAN{{tur}}.png"alt="service">
+                        <img src="assets/img/{{tur}}"alt="service" class="img-service">
                     </ion-col>
                 </ion-row>
             </ion-grid>
