--- a/beauty-app/src/app/pages/rooms/rooms.page.html
+++ b/beauty-app/src/app/pages/rooms/rooms.page.html
@@ -4,8 +4,8 @@
     
   </div>
   <div>
-    <h4 class="ion-text-center">These are Our<br> Rooms</h4>
-    <h6 class="ion-text-center">Check the Photos</h6>
+    <h4 class="ion-text-center txt">These are Our<br> Rooms</h4>
+    <h6 class="ion-text-center txt">Check the Photos</h6>
   </div>
   <div class="ion-padding">
     <ion-radio-group>
