--- a/beauty-app/src/app/pages/car-shop/car-shop.page.html
+++ b/beauty-app/src/app/pages/car-shop/car-shop.page.html
@@ -1,7 +1,8 @@
 <app-header></app-header>
 
 <ion-content>
-    <ion-grid>
+    <h1>Coming soon</h1>
+    <!-- <ion-grid>
         <ion-row>
             <ion-col size="0" size-md="3" size-lg="4"></ion-col>
             <ion-col *ngIf="hero.shoppingcart.length === 0" size="12" size-md="6" size-lg="4">
@@ -29,5 +30,5 @@
             </ion-col>
             <ion-col size="0" size-md="3" size-lg="4"></ion-col>
         </ion-row>
-    </ion-grid>
+    </ion-grid> -->
 </ion-content>
