--- a/beauty-app/src/app/pages/car-shop/car-shop.page.scss
+++ b/beauty-app/src/app/pages/car-shop/car-shop.page.scss
@@ -11,6 +11,10 @@ h1{
    .description{
     color: darkgray !important;
 }
+.total{
+    font-size: 19px;
+    color: #787179;
+}
 .price{
     font-size: 23px;
     color: #44cc63;
