--- a/beauty-app/src/app/pages/medicdone/medicdone.page.html
+++ b/beauty-app/src/app/pages/medicdone/medicdone.page.html
@@ -1,9 +1,21 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>medicdone</ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content>
-
+<ion-content color="light">
+  <ion-grid fixed>
+    <ion-row>
+      <ion-col size="12" size-md="3" size-xl="3"></ion-col>
+      <ion-col size="12" size-md="6" size-xl="6">
+        <ion-list lines="full" class="ion-no-margin ion-no-padding">
+          <ion-item>
+            <ion-label position="" class="txt-label">Plan/Procedure Name</ion-label>
+            <ion-label class="date-style" position="">Date</ion-label>
+          </ion-item>
+          <ion-item *ngFor="let data of pypdone" >
+            <ion-label position="" class="txt-label">{{data.name}}</ion-label>
+            <ion-label position="" class="date-style">{{data.date}}</ion-label>
+              
+          </ion-item>          
+        </ion-list>
+      </ion-col>
+      <ion-col size="12" size-md="3" size-xl="3"></ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
