--- a/beauty-app/src/app/pages/medicdone/medicdone.page.scss
+++ b/beauty-app/src/app/pages/medicdone/medicdone.page.scss
@@ -2,3 +2,9 @@
     color: #7B7A7A;
     font-size: 13px ;
 }
+.img-medic{
+    width: 75%;
+    padding-top:2rem ;
+    display: block;
+    margin: 0 auto;
+}
