--- a/beauty-app/src/app/pages/medicdone/medicdone.page.html
+++ b/beauty-app/src/app/pages/medicdone/medicdone.page.html
@@ -11,11 +11,19 @@
           <ion-item *ngFor="let data of pypdone" >
             <ion-label position="" class="txt-label">{{data.name}}</ion-label>
             <ion-label position="" class="date-style">{{data.date}}</ion-label>
-              
           </ion-item>          
         </ion-list>
       </ion-col>
       <ion-col size="12" size-md="3" size-xl="3"></ion-col>
+      <ion-col size="2" size-lg="2" size-md="2"></ion-col>
+      <ion-row>
+        <ion-col size="2" size-lg="2" size-md="2"></ion-col>
+        <ion-col size="8" size-lg="8" size-md="8">
+          <img src="../../../assets/img/horizontal_logo.png" alt="" class="img-medic">
+        </ion-col>
+        <ion-col size="2" size-lg="2" size-md="8"></ion-col>
+          </ion-row>
+          <ion-col size="2" size-lg="2" size-md="8"></ion-col>
     </ion-row>
   </ion-grid>
 </ion-content>
