--- a/beauty-app/src/app/pages/car-shop/car-shop.page.html
+++ b/beauty-app/src/app/pages/car-shop/car-shop.page.html
@@ -33,7 +33,7 @@
                     </ion-item>
                 </ion-card>
                 <h3 class="ion-text-center price-ti">$500 USD</h3>
-                <ion-button (click)="payment()" expand="block" class="button-pay">Make Deposit</ion-button>
+                <ion-button (click)="payWithPaypal()" expand="block" class="button-pay">Make Deposit</ion-button>
             </ion-col>
             <ion-col size="0" size-md="3" size-lg="4"></ion-col>
         </ion-row>
