--- a/beauty-app/src/app/components/post/post.component.html
+++ b/beauty-app/src/app/components/post/post.component.html
@@ -55,7 +55,7 @@
                                     <ion-item class="line-up">
                                         <ion-input *ngIf="!this.cards[i].isCom" placeholder="Add Comment" [(ngModel)]="this.cards[i].comment">
                                         </ion-input>
-                                        <ion-spinner class="center" color="primary-bl" *ngIf="this.cards[i].isCom" ></ion-spinner>
+                                        <ion-spinner name="dots" class="center" color="primary-bl" *ngIf="this.cards[i].isCom" ></ion-spinner>
                                         <ion-button *ngIf="!this.cards[i].isCom" fill="clear" expand="full">
                                             <ion-text color="primary-bl" slot="end" (click)="comment(i)">Comment
                                             </ion-text>
