--- a/beauty-app/src/app/pages/car-shop/car-shop.page.html
+++ b/beauty-app/src/app/pages/car-shop/car-shop.page.html
@@ -28,7 +28,7 @@
                 <ion-card>
                     <ion-item lines="none">
                         <ion-label class="ion-text-wrap">
-                            <p><span class="total">Total:</span><span class="price">$ {{total}}</span></p>
+                            <p><span class="total">Total:</span><span class="price">$ {{hero.total}}</span></p>
                         </ion-label>
                     </ion-item>
                 </ion-card>
