--- a/beauty-app/src/app/pages/homemedic/homemedic.page.html
+++ b/beauty-app/src/app/pages/homemedic/homemedic.page.html
@@ -1,4 +1,11 @@
-
+<ion-header>
+  <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-back-button text="Back" defaultHref="/homeadmin"></ion-back-button>
+    </ion-buttons>
+    <ion-title>Medical Control Panel</ion-title>
+  </ion-toolbar>
+</ion-header>
   <ion-content color="light">
       <ion-grid>
         <ion-row>
