--- a/beauty-app/src/app/pages/medicavailable/medicavailable.page.html
+++ b/beauty-app/src/app/pages/medicavailable/medicavailable.page.html
@@ -1,4 +1,11 @@
-
+<ion-header>
+  <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-back-button text="Back" defaultHref="/homeadmin"></ion-back-button>
+    </ion-buttons>
+    <ion-title>Beauty Lab Surgery Available</ion-title>
+  </ion-toolbar>
+</ion-header>
   <ion-content color="light">
     <ion-grid fixed>
       <ion-row>
