--- a/beauty-app/src/app/pages/inicio/inicio.page.html
+++ b/beauty-app/src/app/pages/inicio/inicio.page.html
@@ -29,9 +29,9 @@
     <ion-row>
       <ion-col size="12" size-lg="2" size-md="2"></ion-col>
       <ion-col size="12" size-lg="8" size-md="8">
-        <ion-button color="trasparent" fill="outline" class="btn-home" routerLink="/login">
+        <ion-button color="light" class="btn-home" fill="outline" routerLink="/login">
           <ion-text color="light">
-            <h3>SIGN UP WITH YOUR EMAIL</h3>
+            <h3>Enter to Beautylab</h3>
           </ion-text>
         </ion-button>
       </ion-col>
@@ -41,7 +41,7 @@
       <ion-col size="12" size-lg="2" size-md="2"></ion-col>
       <ion-col size="12" size-lg="8" size-md="8">
         <ion-text color="light" class="text-home">
-          <h4 class="ion-text-center">Log in with social account</h4>
+          <!-- <h4 class="ion-text-center">Log in with social account</h4> -->
         </ion-text>
       </ion-col>
       <ion-col size="12" size-lg="2" size-md="2"></ion-col>
