--- a/beauty-app/src/app/pages/plans-detail/plans-detail.page.html
+++ b/beauty-app/src/app/pages/plans-detail/plans-detail.page.html
@@ -8,7 +8,9 @@
             <h1 class="ion-text-center home">{{plans.nombre}}</h1>
           </ion-text>
         </div>
-        <img class="plans" src="assets/img/pyp/{{plans.img_plan}}" alt="" srcset="">
+        <div>
+        <img class="plans" (click)="onPress(plans.img_plan)"  src="assets/img/pyp/{{plans.img_plan}}" alt="" srcset="">
+      </div>
         <br>
         <ion-text color="light">
           <h2 class="ion-text-center txtdescription">Description Plan: <br> {{plans.descripcion}}</h2>
