--- a/beauty-app/src/app/pages/procedures-detail/procedures-detail.page.scss
+++ b/beauty-app/src/app/pages/procedures-detail/procedures-detail.page.scss
@@ -34,7 +34,14 @@ h1.title{
 
 .txtdescription{
     font-family: 'advent_promedium';
-    size: 28px;
+    color: aliceblue;
+    font-size: 11px;
+        
+}
+.description{
+    font-family: 'bioliquidregular';
+    font-size: 15px;
+    color: aliceblue;
 }
 
 .img-header{
