--- a/beauty-app/src/app/pages/procedures-detail/procedures-detail.page.html
+++ b/beauty-app/src/app/pages/procedures-detail/procedures-detail.page.html
@@ -3,13 +3,14 @@
     <ion-row>
       <ion-col size="0" size-sm="0" size-md="3" size-lg="4"></ion-col>
       <ion-col size="12" size-sm="12" size-md="6" size-lg="4">
-        <div>
-         <h1 class="ion-text-center txtdescription">{{procedures.descripcion}}</h1> 
-        </div>
+        <ion-col size="0" size-sm="0" size-md="3" size-lg="4"></ion-col>
+        <ion-col size="12" size-sm="12" size-md="6" size-lg="4">
+        <div><ion-text class="title-procedure">{{procedures.nombre}}</ion-text></div>
+        </ion-col>
         <img class="plans" src="assets/img/pyp/{{procedures.imagen}}" alt="" srcset="">
         <br>
         <ion-text color="light">
-          <h3 class="ion-text-center description">Description Procedure: <br> {{procedures.descripcion}}</h3>
+          <h3 class="description">Description Procedure: <br> {{procedures.descripcion}}</h3>
         </ion-text>
         <br>
         <ion-grid>
