--- a/beauty-app/src/app/pages/make-body/make-body.page.html
+++ b/beauty-app/src/app/pages/make-body/make-body.page.html
@@ -1,3 +1,15 @@
 <app-header></app-header>
 
-<iframe  src="http://localhost/beautylabApp/beauty-Lab/beauty-api/resources/views/" frameborder=0 style="width: 100%; height: 100vh;"></iframe>
+<ion-content>
+  <ion-grid>
+    <ion-row>
+      <ion-col size="0" size-md="2" size-lg="4"></ion-col>
+      <ion-col size="12" size-md="8" size-lg="4">
+        <h1>Coming soon</h1>
+    <img class="center" src="assets/img/model3d.png" alt="" srcset="">
+      </ion-col>
+      <ion-col size="0" size-md="2" size-lg="4"></ion-col>
+    </ion-row>
+  </ion-grid>
+    
+</ion-content>
