Revert "Revert "Merge branch 'master' into Miguel""
This reverts commit 7860175d359554b7b857c85356e3088dc85b636c.

--- a/beauty-api/public/styles/style.css
+++ b/beauty-api/public/styles/style.css
@@ -31,6 +31,10 @@ body{
 .fli{
     height: 600px !important;
     text-align: center;
+    margin-left: 10em;
+}
+
+iframe{
     margin: 0 auto;
 }
 .subtitles{
