--- a/beauty-app/src/app/components/profile-review-blog/profile-review-blog.component.scss
+++ b/beauty-app/src/app/components/profile-review-blog/profile-review-blog.component.scss
@@ -1,3 +1,9 @@
+.icon-trash{
+    display: flex;
+    margin: 0 auto;
+    color: red;
+    font-size: 17px;
+}
 .mar-top{
     margin-top: 3.5rem !important;
 }
