--- a/beauty-app/src/app/pages/homeapp/homeapp.page.scss
+++ b/beauty-app/src/app/pages/homeapp/homeapp.page.scss
@@ -11,7 +11,7 @@ ion-content{
     --color:#fff;
 }
 ion-slides{
-    --bullet-background:grey;
+    --bullet-background:#fff;
     --bullet-background-active:#FFF;
 }
 h3{
