--- a/beauty-app/src/app/pages/deposit/deposit.page.html
+++ b/beauty-app/src/app/pages/deposit/deposit.page.html
@@ -73,7 +73,7 @@
           </ion-row>
         </ion-grid>
         <h3 class="ion-text-center" style="padding-top: 2rem;">$500 USD</h3>
-        <ion-button expand="block" class="button-pay" (click)="upPayment()">Make Deposit</ion-button>
+        <ion-button expand="block" class="button-pay" (click)="payWithPaypal()">Make Deposit</ion-button>
         <ion-row>
           <ion-col size="6">
             <ion-button color="medium" expand="block" (click)="cancel()">Cancel <ion-icon class="ion-float-right" name="close"></ion-icon>
