--- a/beauty-app/src/app/pages/social/social.page.html
+++ b/beauty-app/src/app/pages/social/social.page.html
@@ -7,7 +7,7 @@
     </ion-refresher>
 
     <app-post [posts]="cards"></app-post>
-    <ion-fab *ngIf="toper" horizontal="start" vertical="bottom" slot="fixed">
+    <ion-fab *ngIf="toper" horizontal="center" vertical="bottom" slot="fixed">
         <ion-fab-button size="small" (click)="ScrollToTop()" color="primary">
             <ion-icon name="arrow-up"></ion-icon>
         </ion-fab-button>
