--- a/beauty-app/src/app/pages/social/social.page.html
+++ b/beauty-app/src/app/pages/social/social.page.html
@@ -7,6 +7,13 @@
     </ion-refresher>
 
     <app-post [posts]="cards"></app-post>
+
+    <ion-infinite-scroll threshold="100px" (ionInfinite)="loadData($event)">
+        <ion-infinite-scroll-content         
+          loadingSpinner="bubbles">
+        </ion-infinite-scroll-content>
+      </ion-infinite-scroll>
+
     <ion-fab *ngIf="toper" horizontal="center" vertical="bottom" slot="fixed">
         <ion-fab-button size="small" (click)="ScrollToTop()" color="primary">
             <ion-icon name="arrow-up"></ion-icon>
