--- a/beauty-app/src/app/pages/login/login.page.scss
+++ b/beauty-app/src/app/pages/login/login.page.scss
@@ -16,6 +16,10 @@ ion-content{
 .center{
     text-align: center;
 }
+.center-e{
+    display: flex;
+    margin: 0 auto;
+}
 .padding{
     padding: 1rem;
 }
