--- a/beauty-app/src/app/pages/medicdone/medicdone.page.html
+++ b/beauty-app/src/app/pages/medicdone/medicdone.page.html
@@ -16,11 +16,12 @@
             <ion-label position="" class="txt-label">Plan/Procedure Name</ion-label>
             <ion-label class="date-style" position="">Date</ion-label>
           </ion-item>
-          <ion-item *ngFor="let data of pypdone" >
-            <ion-label position="" class="txt-label">{{data.name}}</ion-label>
-            <ion-label position="" class="date-style">{{data.date}}</ion-label>
+          <ion-item *ngFor="let data of reservations" >
+            <ion-label *ngIf="data.plan" position="" class="txt-label">{{data.plan}}</ion-label>
+            <ion-label *ngIf="data.procedimiento" position="" class="txt-label">{{data.procedimiento}}</ion-label>
+            <ion-label position="" class="date-style">{{data.fecha_reserva | date:"dd-MM-yyyy" }}</ion-label>
           </ion-item>          
-        </ion-list>
+      </ion-list>
       </ion-col>
       <ion-col size="12" size-md="3" size-xl="3"></ion-col>
       <ion-col size="2" size-lg="2" size-md="2"></ion-col>
