--- a/beauty-app/src/app/pages/blog/blog.page.html
+++ b/beauty-app/src/app/pages/blog/blog.page.html
@@ -1,9 +1,3 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>blog</ion-title>
-  </ion-toolbar>
-</ion-header>
+<app-header></app-header>
 
-<ion-content>
-
-</ion-content>
+<iframe  src="https://beautylabapp.blogspot.com/2020/04/welcome-to-beauty-lab.html" frameborder=0 style="width: 100%; height: 100vh;"></iframe>
