--- a/beauty-app/src/app/pages/shop/shop.page.html
+++ b/beauty-app/src/app/pages/shop/shop.page.html
@@ -1,19 +1,14 @@
-<app-header titulo="BeautyLab Rooms"></app-header>
+<app-header titulo="BeautyLab Shop"></app-header>
 
 
 <ion-content>
   <ion-grid fixed>
         <ion-row>
-            <ion-col *ngFor="let producto of products" size="6">
-                <ion-card color="light">
-                    <img [src]="producto.image.src"/>
-                    <ion-card-content>
-                        <ion-card-title>
-                            {{ producto.title }}
-                        </ion-card-title>
-                        <ion-button expand="full" onclick="window.open('https://beauty-lab-merch.myshopify.com/','_self'); return false;">Buy</ion-button>
-                    </ion-card-content>
-                </ion-card>
+            <ion-col size="12">
+                <ion-text class="text-center" color="ligth"><h1>Coming Soon!!!</h1></ion-text>
+            </ion-col>
+            <ion-col size="12">
+                <ion-text class="text-center" color="ligth"><h1>Beauty Lab Shop!!!</h1></ion-text>
             </ion-col>
         </ion-row>
     </ion-grid> 
