--- a/beauty-app/src/app/pages/before-after/before-after.page.html
+++ b/beauty-app/src/app/pages/before-after/before-after.page.html
@@ -1,7 +1,7 @@
 <app-header></app-header>
 
 <ion-content>
-    <ion-grid>
+<!--     <ion-grid>
         <ion-row>
             <ion-col size="0" size-sm="0" size-lg="3" size-lg="4"></ion-col>
             <ion-col size="12" size-sm="12" size-lg="3" size-lg="4">
@@ -80,5 +80,14 @@
             </ion-col>
             <ion-col size="0" size-sm="0" size-lg="3" size-lg="4"></ion-col>
         </ion-row>
-    </ion-grid>
+    </ion-grid> -->
+<ion-grid>
+    <ion-row>
+        <ion-col size="12" >
+            <ion-text color="light" class="text-center">
+                <h1>soon find here the images of the testimonies of the physical changes that BeautyLab helped to achieve </h1>
+            </ion-text>
+        </ion-col>
+    </ion-row>
+</ion-grid>
 </ion-content>
