--- a/beauty-app/src/app/pages/before-after/before-after.page.scss
+++ b/beauty-app/src/app/pages/before-after/before-after.page.scss
@@ -9,3 +9,18 @@ ion-toolbar{
     text-align: center;
     font-size: 20px;
 }
+
+
+h1{
+    font-family: 'bioliquidregular';
+    font-size:33px;
+    color:aliceblue;
+    text-align: center ;
+    padding-top: 2rem;
+   }
+
+
+   .txt{
+           color:#fff;
+           font-size: 20px;
+   }
